cmake_minimum_required(VERSION 3.19.2)

# Version Info
set(LIVERMORE_SDK_VERSION_MAJOR 0)
set(LIVERMORE_SDK_VERSION_MINOR 0)
set(LIVERMORE_SDK_VERSION_PATCH 1)
set(LIVERMORE_SDK_VERSION ${LIVERMORE_SDK_VERSION_MAJOR}.${LIVERMORE_SDK_VERSION_MINOR}.${LIVERMORE_SDK_VERSION_PATCH})

# Project Info
set(PACKAGE_NAME      "livermore-sdk")
set(PACKAGE_VERSION   "${LIVERMORE_SDK_VERSION}-dev")
set(PACKAGE_TARNAME   "${PACKAGE_NAME}-${PACKAGE_VERSION}")
set(PACKAGE_BUGREPORT "https://github.com/hanjingo/livermore-qt/issues")

project(livermore-sdk LANGUAGES CXX)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Core)
find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Core)

set(3RD_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../../3rd)
include_directories(${3RD_DIR}/libcpp)

set(PROJECT_SOURCES
    livermoresdk.h
    error.h
)

add_library(${PROJECT_NAME} SHARED
    ${PROJECT_SOURCES}
)

# target_link_libraries(${PROJECT_NAME} PRIVATE )

target_compile_definitions(${PROJECT_NAME} PRIVATE ${PROJECT_NAME}_LIBRARY)
